# eteam

./: .gitignore  storage.db  storage_db_connection_utf_8.patch  terraform.tfstate
backend/: .gitignore  README.md  data.csv  main.py  pyproject.toml
backend/authentication/: Dockerfile  authentication.db  authentication_main.py  database_definition.py  exceptions.py  models.py  repository.py
backend/common/: base_model.py  dependencies.py  models.py  origins.py
backend/controller/: main.py
backend/gateway/: api_router.py
backend/notification/: Dockerfile  database_definition.py  exceptions.py  models.py  notification.db  notification_main.py  repository.py
backend/payment/: Dockerfile  database_definition.py  db_models.py  exceptions.py  get_events.py  models.py  payment.db  payment_main.py  repository.py
backend/payment/payment_services/: stripe.py
backend/storage/: Dockerfile  data.csv  database_definition.py  exceptions.py  file_manager.py  models.py  oracle_manager.py  repository.py  storage.db  storage_main.py
backend/storage/storage_fs/113119663137601468015/: a2349f0a-dfbe-46d4-b39b-73e53a8268c9  d63b4681-9013-4ac1-b8fb-10464c0d3002  ecefa2b8-8053-491b-8771-c946e0bd5fb9
backend/storage/storage_fs/991/: 40093dcd-4a19-4b7c-b8a4-f8d679a78e25  8673a0ff-33aa-4165-a439-3d3d0e373b40
certs/: cert.pem  key.pem
front/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
front/src/: App.tsx  (+2 more)
storage/: main.py  pyproject.toml
terraform/: main.tf  nginx.conf  providers.tf  terraform.tfstate  terraform.tfstate.backup
(+20 files in other folders)
