

[tool.poetry]
name = "backend"
version = "0.0.1"
authors = ["eteam"]
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
loguru = "^0.7.2"
google-api-python-client = "^2.125.0"
google-auth-oauthlib = "^1.2.0"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.29"
stripe= "^9.4.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

